# scout_ws

./: README.md
src/scout_bringup/: CMakeLists.txt  package.xml
src/scout_bringup/launch/: bringup.launch.py
src/scout_dockerfiles/: Dockerfile  docker-compose.yml  install_docker.sh
src/scout_dockerfiles/install/: i_dep.sh
src/scout_navigation/: CMakeLists.txt  package.xml
src/scout_navigation/config/: navigation.yaml
src/scout_navigation/launch/: navigation.launch.py  slam.launch.py
src/scout_ros2/scout_description/urdf/: generate_urdf.sh
